--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --watch src --ext ts --exec tsx src/index.ts",
-    "build": "tsc && tsc-alias",
-    "start": "node dist/index.js"
+    "build": "tsup",
+    "start": "node dist/index.js",
+    "deploy": "docker build -t mi-backend-minecraft . && docker tag mi-backend-minecraft:latest 529088289796.dkr.ecr.us-east-2.amazonaws.com/fashiontpark-backend:latest && docker push 529088289796.dkr.ecr.us-east-2.amazonaws.com/fashiontpark-backend:latest"
   },
   "keywords": [],
   "author": "",
@@ -34,6 +35,7 @@
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.16",
+    "tsup": "^8.5.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
